feat(AccPushServiceImpl): distribute user info to other devices. Still under development